# kicad_jlcimport

./: .gitignore  3D_OFFSET_ANALYSIS.md  CLAUDE.md  CODE_REVIEW_PLAN.md  MANUAL_TESTING.md  README.md  TLS_CERTIFICATES.md  VISUAL_TESTING.md  __init__.py  _kicad_format.py  api.py  cacerts.pem  categories.py  cli.py  convert_testdata.py  dialog.py  ee_types.py  fetch_cacerts.py  footprint_writer.py  gui_entry.py  importer.py  install.ps1  install.sh  kicad_sym_to_svg.py  library.py  metadata.json  model3d.py  parser.py  plugin.py  preview_part.py  pyproject.toml  symbol_writer.py  tui.py  tui_entry.py
.github/workflows/: release.yml  test.yml  visual-comparison.yml
docs/: 3d-models.md  3d-rendering-findings.md  architecture.md
fixes/: README.md  _nanosvg.pyd
gui/: __init__.py  __main__.py
src/kicad_jlcimport/: __init__.py  cli.py  dialog.py  gui_entry.py  importer.py  plugin.py  tui_entry.py
src/kicad_jlcimport/easyeda/: __init__.py  api.py  cacerts.pem  ee_types.py  fetch_cacerts.py  parser.py
src/kicad_jlcimport/gui/: __init__.py  symbol_renderer.py
src/kicad_jlcimport/kicad/: __init__.py  footprint_writer.py  format.py  library.py  model3d.py  symbol_writer.py  version.py
src/kicad_jlcimport/tui/: __init__.py  app.py  gallery.py
testdata/: C1027_footprint.json  C160404_footprint.json  C160404_symbol.json  C2040_footprint.json  C2040_svgs.json  C2040_symbol.json  C2320_footprint.json  C2320_model.step  C2320_symbol.json  C2321_footprint.json  C2321_model.step  C2321_symbol.json  C2765186_footprint.json  C2765186_symbol.json  C3116_footprint.json  C3116_symbol.json  C33478_footprint.json  C33478_model.step  C33478_symbol.json  C33696_footprint.json  C34376141_footprint.json  C34376141_symbol.json  C385834_footprint.json  C385834_symbol.json  C393939_footprint.json  C393939_symbol.json  C395958_footprint.json  C395958_symbol.json  C427602_footprint.json  C427602_svgs.json  C427602_symbol.json  C5360901_footprint.json  C5360901_svgs.json  C5360901_symbol.json  C558421_footprint.json  C558421_svgs.json  C558421_symbol.json  C668119_footprint.json  C668119_symbol.json  C82899_footprint.json  (+2 more)
tests/: conftest.py  test_api.py  test_api_extended.py  test_cli.py  test_cli_extended.py  test_convert_all.py  test_footprint_writer.py  test_global_lib_dir.py  test_importer.py  test_integration.py  test_kicad_format.py  test_kicad_version.py  test_library.py  test_library_extended.py  test_model3d.py  test_parser.py  test_parser_extended.py  test_sticky_destination.py  test_symbol_writer.py
tools/: compare_part.py  convert_testdata.py  kicad_mod_to_svg.py  preview_part.py
tui/: __init__.py  __main__.py  app.py  gallery.py  helpers.py
