[project]
name = "kicad-jlcimport"
version = "1.0.0"
description = "KiCad 9 plugin to import components from JLCPCB/LCSC"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.optional-dependencies]
tui = ["textual>=1.0.0", "textual-image[textual]>=0.6.0", "Pillow>=9.0.0"]
gui = ["wxPython>=4.2.0"]
dev = ["ruff>=0.4.0", "pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.scripts]
jlcimport-tui = "kicad_jlcimport.tui:main"
jlcimport-gui = "kicad_jlcimport.gui:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = ["**/tests/*", "**/tui/*", "**/gui/*", "**/tui_entry.py", "**/gui_entry.py", "**/dialog.py", "**/plugin.py", "**/categories.py", "**/convert_testdata.py", "**/kicad_mod_to_svg.py", "**/kicad_sym_to_svg.py", "**/preview_part.py"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["kicad_jlcimport"]
